# Recent-Contacts-Plugin-for-Pidgin

./: AUTHORS  CMakeLists.txt  COPYING  Makefile.mingw  README  recent_contacts.c
